--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                     <!-- now you can start -->
                     <div class="now-you-can-text">
                         <p>Now You Can</p>
-                        <p class="d-md-block d-none">Slim, Strengthen & Tone</p>
-                        <p class="d-md-none d-block"><strong>Slim, Strengthen & Tone Your WHOLE Body</strong></p>
+                        
+                        <p><strong>Slim, Strengthen & Tone Your WHOLE Body</strong></p>
                         
                         <p><span class="d-md-inline d-none">Your WHOLE Body</span> Starting In Just Minutes A Day</p>
                     </div>
@@ -66,7 +66,7 @@
                         <img src="assests/images/60days-assure.png" alt="img" class="img-fluid img2">
                         <h2><span style="color: #ff0000; font-weight: 700;"> <del>$197</del></span> <span style="color: #5ab581; font-weight: 600;">$37</span></h2>
                         <h4>Or</h4>
-                        <a href="#">No thanks, I don’t want to banish unsightly cellulite from my legs, butt, or thighs. I already have smooth, flawless legs that I love and don’t want to change a thing. I recognize that this is my ONLY chance to invest in this upgrade at this price, and I decline this offer forever.</a>
+                        <a href="#">No thanks, I don’t want a slim and toned body in just minutes a day. I don’t want this fun, 21-day yoga challenge that will accelerate my fat loss. I recognize that this is my ONLY chance to invest in this upgrade at this price, and I decline this offer forever.</a>
                     </div>
                     <!-- yes i want end -->
                     <!-- New Member start -->
@@ -94,7 +94,7 @@
                 <div class="wrapper-inner">
                     <!-- Weight-Loss start -->
                     <div class="Weight-Loss ">
-                        <div class="text_inner pb-275"><p>Hey, it’s Coach Roddy and I have a question for you…</p>
+                        <div class="text_inner pb-275">
                             <p>I’m excited to tell you about this gentle, <strong>FUN 21-day yoga challenge</strong> that helps you burn fat FASTER than ever before…</p>
                             <p>Imagine in just 21 days from now when you:</p>
                         </div>
@@ -105,7 +105,7 @@
                             <li> <i class="fa-solid fa-circle-check"></i> Ease arthritis pain &amp; day to day stress.</li>
                             <li> <i class="fa-solid fa-circle-check"></i> And helps you feel healthier and happier now.</li>
                         </ul>
-                        <div class="text_inner"><p>This method banishes cellulite from your legs, fast….</p>
+                        <div class="text_inner">
                             <p>Here’s the deal…</p>
                             <p>You’ve started down the journey of tackling that pesky SLR-11 protein</p>
                             <p>That’s like the GLUE, sticking your fat together…</p>
@@ -317,7 +317,8 @@
                 <div class="wrapper-inner">
                     <!-- Weight-Loss start -->
                     <div class="Weight-Loss ">
-                        <h2>Today, I want to give you an opportunity to grab the <br> Natural Cellulite Solution at an incredible discount</h2>
+                        <h2>Today only, You have the opportunity to grab <br>
+Yoga Shred Program at a special discount</h2>
                         <div class="text_inner">
                             <p><strong>Yoga shred sells for $197</strong> on my website.</p>
                             <p>But because you’re still reading this page now…</p>
@@ -387,8 +388,8 @@
                             <p>Because if you stopped taking their expensive medication, they’d go out of business!</p>
                             <p>That’s why if you order today, you’ll get my 59-page book on natural health remedies…</p>
                         </div>
-                        <div class="img-inner text-center pb-275">
-                            <img src="assests/images/secret-natural-curse.png" alt="img" class="img-fluid pb-275">
+                        <div class="img-inner img-inner002 text-center pb-275">
+                            <img src="assests/images/secret-natural-curse.png" alt="img" class="img-fluid pb-275 ">
                             <small class="mt-0">The Product is digital and images are for vizualization only</small>
                         </div>
                         <div class="text_inner pb-275">
@@ -438,7 +439,7 @@
                     <!-- container end -->
                 </section>
                 <!-- wrapper end -->
-                <section class="wrapper wrapper11">
+                <section class="wrapper wrapper11 mb-30">
                     <div class="container">
                         <!-- wrapper inner start -->
                         <div class="wrapper-inner">
@@ -467,9 +468,9 @@
                                     <img src="assests/images/button-up3.jpg" alt="img" class="img-fluid img1 d-sm-block d-none">
                                     <img src="assests/images/upsell-3-mobile-button.png" alt="img" class="img-fluid img1 d-sm-none d-block">
                                     <img src="assests/images/60days-assure.png" alt="img" class="img-fluid img2">
-                                    <h2><span style="color: #ff0000; font-weight: 700;"> <del>$97</del></span> <span style="color: #5ab581; font-weight: 600;">$19</span></h2>
+                                    <h2><span style="color: #ff0000; font-weight: 700;"> <del>$197</del></span> <span style="color: #5ab581; font-weight: 600;">$37</span></h2>
                                     <h4>Or</h4>
-                                    <a href="#">No thanks, I don’t want to banish unsightly cellulite from my legs, butt, or thighs. I already have smooth, flawless legs that I love and don’t want to change a thing. I recognize that this is my ONLY chance to invest in this upgrade at this price, and I decline this offer forever.</a>
+                                    <a href="#">No thanks, I don’t want a slim and toned body in just minutes a day. I don’t want this fun, 21-day yoga challenge that will accelerate my fat loss. I recognize that this is my ONLY chance to invest in this upgrade at this price, and I decline this offer forever.</a>
                                 </div>
                             </div>
                             <!-- footer start -->
