--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                     <!-- vide item start -->
                     <div class="video-wrapper pb-275">
                         <div class="vid ratio ratio-16x9">
-                            <img id="hide" src="assests/images/video-overlay.jpg" data-video="https://player.vimeo.com/video/718753367?h=d0c1de9ffc" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen />
                             
+                            <iframe src="https://player.vimeo.com/video/718753367?h=d0c1de9ffc" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
                         </div>
                     </div>
                     <!-- vide item end -->
